# SQLBuilder

./: .gitignore  setup.cfg
SQLBuilder/: Builder.py  QueryBuilder.py  QueryObject.py  QueryTranslator.py  Structure.py
SQLBuilder/Query/: BaseQuery.py  Delete.py  Insert.py  Manipulation.py  QueryManipulation.py  Select.py  Update.py
SQLBuilder/Translator/: BaseTranslator.py  GenericTranslator.py  MySQLTranslator.py
pySQLBuilder/: __init__.py
pySQLBuilder/Builder/: BaseBuilder.py  DeleteBuilder.py  InsertBuilder.py  SelectBuilder.py  UpdateBuilder.py  __init__.py
pySQLBuilder/Builder/Component/: JoinBuilder.py
pySQLBuilder/Query/: Delete.py  Insert.py  Manipulation.py  Select.py  Update.py
pySQLBuilder/Query/Component/: Clauses.py  GroupBy.py  Having.py  JoinTable.py  LimitOffset.py  OrderBy.py  Where.py
pySQLBuilder/Structure/: Clause.py  Column.py  Expression.py  Join.py  Limit.py  Order.py  Table.py  Value.py  __init__.py
pySQLBuilder/Translator/: BaseTranslator.py  GenericTranslator.py  MySQLTranslator.py
tests/: BreakObject.py  DeleteWhere.py  InsertMultiValues.py  InsertValues.py  SelectColumn.py  SelectExpression.py  SelectJoin.py  SelectOrderLimit.py  SelectWhereHaving.py  UpdateValues.py  UpdateValuesWhere.py  checkDelete.py  checkInsert.py  checkSelect.py  checkUpdate.py
