[metadata]
name = SQLBuilder
version = 0.0.0
author = Chandra Wijaya Sentosa
author_email = chandra.w.sentosa@gmail.com
description = Standalone python library for building SQL query with elegant syntax
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chandrawi/SQLBuilder
project_urls =
    Bug Tracker = https://github.com/chandrawi/SQLBuilder/issues
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = 
    SQLBuilder
    SQLBuilder/Builder
    SQLBuilder/Query
    SQLBuilder/Translator
python_requires = >=2.7
